--- a/06_servlet/src/main/webapp/WEB-INF/web.xml
+++ b/06_servlet/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,25 @@
         <servlet-name>TestServlet</servlet-name>
         <!-- servlet-class是servlet程序的全类名 -->
         <servlet-class>com.atguigu.servlet.TestServlet</servlet-class>
+        <!-- 配置初始化参数 -->
+        <init-param>
+            <!-- 是参数名 -->
+            <param-name>username</param-name>
+            <!-- 是参数值 -->
+            <param-value>root</param-value>
+        </init-param>
+        <init-param>
+            <!-- 是参数名 -->
+            <param-name>password</param-name>
+            <!-- 是参数值 -->
+            <param-value>admin@123</param-value>
+        </init-param>
+        <init-param>
+            <!-- 是参数名 -->
+            <param-name>url</param-name>
+            <!-- 是参数值 -->
+            <param-value>jdbc:mysql://localhost:3306/test</param-value>
+        </init-param>
     </servlet>
 
     <!-- servlet-mapping标签的作用是告诉服务器，我当前的地址是给那个servlet程序使用的 -->
@@ -21,5 +40,25 @@
              /hello 表示的地址为：http://ip:post/工程地址/hello
          -->
         <url-pattern>/hello</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>TestServlet2</servlet-name>
+        <servlet-class>com.atguigu.servlet.TestServlet2</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>TestServlet2</servlet-name>
+        <url-pattern>/hello2</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>TestServlet3</servlet-name>
+        <servlet-class>com.atguigu.servlet.TestServlet3</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>TestServlet3</servlet-name>
+        <url-pattern>/hello3</url-pattern>
     </servlet-mapping>
 </web-app>
