EL表达式的学习

--- a/08_jsp/src/main/webapp/WEB-INF/web.xml
+++ b/08_jsp/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,8 @@
         <url-pattern>/printHtml</url-pattern>
     </servlet-mapping>
 
+    <!-- 配置监听器 -->
+    <listener>
+        <listener-class>com.atguigu.listener.MyServletContextListenerImpl</listener-class>
+    </listener>
 </web-app>
