--- a/book/web/WEB-INF/web.xml
+++ b/book/web/WEB-INF/web.xml
@@ -31,5 +31,14 @@
         <url-pattern>/userServlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>BookServlet</servlet-name>
+        <servlet-class>com.atgugui.web.BookServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>BookServlet</servlet-name>
+        <url-pattern>/manager/bookServlet</url-pattern>
+    </servlet-mapping>
+
 
 </web-app>
