项目的首页接口的调试

--- a/book/web/WEB-INF/web.xml
+++ b/book/web/WEB-INF/web.xml
@@ -40,5 +40,13 @@
         <url-pattern>/manager/bookServlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>ClientBookServlet</servlet-name>
+        <servlet-class>com.atgugui.web.ClientBookServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ClientBookServlet</servlet-name>
+        <url-pattern>/client/clientBookServlet</url-pattern>
+    </servlet-mapping>
 
 </web-app>
