session的学习和登录显示用户名

--- a/13_cookie_session/src/main/webapp/WEB-INF/web.xml
+++ b/13_cookie_session/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,8 @@
         <servlet-name>SeesionServlet</servlet-name>
         <url-pattern>/seesionServlet</url-pattern>
     </servlet-mapping>
+
+    <session-config>
+        <session-timeout>20</session-timeout>
+    </session-config>
 </web-app>
