--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 /out/
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
