--- a/book/web/WEB-INF/web.xml
+++ b/book/web/WEB-INF/web.xml
@@ -86,4 +86,20 @@
         <url-pattern>/pages/manager/*</url-pattern>
         <url-pattern>/manager/bookServlet</url-pattern>
     </filter-mapping>
+
+    <filter>
+        <filter-name>TransactionFilter</filter-name>
+        <filter-class>com.atgugui.filter.TransactionFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>TransactionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!-- error-page标签配置，服务器出错之后，自动跳转的页面   -->
+    <error-page>
+        <!-- error-code是错误类型 -->
+        <error-code>500</error-code>
+        <!-- location标签表示要跳转的页面路径 -->
+        <location>/pages/error/error500.jsp</location>
+    </error-page>
 </web-app>
